# lb

./: .coveragerc  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .prettierignore  .prettierrc.json  .stylelintrc.json  .taplo.toml  LICENSE  README.md  djlint.toml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  taplo.toml
.github/actions/check-dependencies-changed/: action.yaml
.github/workflows/: ci.yaml  generate-leaderboard.yaml
leaderboard_data/: antichess.json  atomic.json  blitz.json  bot_profiles.json  bullet.json  chess960.json  classical.json  correspondence.json  crazyhouse.json  horde.json  kingOfTheHill.json  racingKings.json  rapid.json  threeCheck.json
leaderboard_html/: style.css
leaderboard_html/css/: style.css
requirements/: all.txt  dev.txt  leaderboard.txt  requirements-all.txt  requirements-coverage.txt  requirements-dev.txt  requirements-leaderboard.txt  requirements-lint.txt  requirements-style.txt  style-jinja.txt  style-python.txt
src/generate/: __init__.py  __main__.py  date_provider.py  file_system.py  generator.py  html_generator.py  leaderboard.py  leaderboard_data.py  leaderboard_generator.py  lichess_bot_user.py  lichess_client.py  online_bot_user.py  real_date_provider.py  real_file_system.py  real_lichess_client.py
src/leaderboard/: __init__.py  __main__.py  date_provider.py  html_generator.py  leaderboard_data.py  leaderboard_generator.py  lichess_bot_user.py  real_date_provider.py  real_lichess_client.py
src/leaderboard/chrono/: __init__.py  date_formatter.py  duration_formatter.py  durations.py  fixed_time_provider.py  real_time_provider.py  time_provider.py
src/leaderboard/data/: __init__.py  data_generator.py  default_remover.py  leaderboard_data.py  leaderboard_objects.py  leaderboard_row.py  leaderboard_update.py
src/leaderboard/fs/: __init__.py  file_paths.py  file_system.py  real_file_system.py
src/leaderboard/li/: __init__.py  bot_user.py  pert_type.py  real_lichess_client.py
src/leaderboard/log/: log_writer.py  logger_creator.py  real_log_writer.py
src/leaderboard/main/: __init__.py  leaderboard_generator.py
src/leaderboard/page/: __init__.py  flag_emoji.py  html_generator.py  meta_tags.py
templates/: index.html.jinja  leaderboard.html.jinja  leaderboard_table.html.jinja  main_frame.html.jinja
tests/: test_leaderboard.py  test_lichess_client.py  test_online_bot_user.py
tests/generate/: fake_date_provider.py  fake_lichess_client.py  in_memory_file_system.py  test_date_provider.py  test_file_system.py  test_generator.py  test_html_generator.py  test_leaderboard.py  test_leaderboard_data.py  test_leaderboard_generator.py  test_lichess_bot_user.py  test_lichess_client.py  test_online_bot_user.py
tests/leaderboard/: __init__.py  fake_date_provider.py  fake_lichess_client.py  in_memory_file_system.py  test_date_provider.py  test_file_system.py  test_html_generator.py  test_leaderboard_data.py  test_leaderboard_generator.py  test_lichess_bot_user.py  test_lichess_client.py
tests/leaderboard/chrono/: __init__.py  epoch_seconds.py  fake_time_provider.py  test_date_formatter.py  test_duration_formatter.py  test_fixed_time_provider.py  test_time_provider.py
tests/leaderboard/data/: __init__.py  test_data_generator.py  test_default_remover.py  test_leaderboard_data.py  test_leaderboard_generator.py  test_leaderboard_objects.py  test_leaderboard_row.py  test_leaderboard_update.py
tests/leaderboard/fs/: __init__.py  in_memory_file_system.py  test_file_paths.py  test_file_system.py
tests/leaderboard/li/: __init__.py  fake_lichess_client.py  test_bot_user.py  test_lichess_client.py  test_perf_type.py
tests/leaderboard/log/: __init__.py  fake_log_writer.py  test_logger_creator.py
tests/leaderboard/main/: __init__.py  test_leaderboard_generator.py
tests/leaderboard/page/: __init__.py  test_flag_emoji.py  test_html_generator.py  test_meta_tags.py
