[project]
name = "lichess-bot-leaderboard"
version = "0.1.0"
description = "A leaderboard for lichess bots"
requires-python = ">=3.11"


# djlint
[tool.djlint]
# Not sure if the profile matters.
profile = "jinja"
# Nice and compact.
indent = 2
# The GitHub editor is 127 chars wide.
max_line_length = 127
# Don't let attributes undermine the max line length.
max_attribute_length = 127
# Allow blank lines.
max_blank_lines = 1


# Ruff configured in /ruff.toml


# pyright
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = [
  "src",
  "tests",
]
exclude = [
  "**/__pycache__",
  ".venv",
]


# coverage
[tool.coverage.run]
branch = true
command_line = "-m unittest discover -v -s tests -p test_*.py"
dynamic_context = "test_function"
source = [
  "src",
]
omit = [
  "**/__pycache__",
  ".venv",
]

[tool.coverage.report]
# Don't fail due to missing coverage
fail_under = 0
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
show_contexts = true

[tool.coverage.xml]
output = "coverage.xml"
