[project]
name = "lichess-bot-leaderboard"
version = "0.1.0"
description = "A leaderboard for lichess bots"
requires-python = ">=3.11"


# djLint configured in /djlint.toml
# Ruff configured in /ruff.toml


# pyright
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = [
  "src",
  "tests",
]
exclude = [
  "**/__pycache__",
  ".venv",
]


# coverage
[tool.coverage.run]
branch = true
command_line = "-m unittest discover -v -s tests -p test_*.py"
dynamic_context = "test_function"
source = [
  "src",
]
omit = [
  "**/__pycache__",
  ".venv",
]

[tool.coverage.report]
# Don't fail due to missing coverage
fail_under = 0
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
show_contexts = true

[tool.coverage.xml]
output = "coverage.xml"
